[package]
name = "lru-crit-cache"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
repository = "https://github.com/elfsternberg/lru-crit-cache.git"
homepage = "https://github.com/elfsternberg/lru-crit-cache.git"
license = "Mozilla Public License"
readme = "README.md"
description = "An experimental least-recently-used cache with dynamic eviction criteria."

